[wip] db with prisma 6.19
vulnerability in dep of 6.20

--- a/srcs/.env.example
+++ b/srcs/.env.example
@@ -1,16 +1,25 @@
 # Environment variables for docker-compose
 # Copy this file to .env
 
-# Host volume path
+#(production, development)
+NODE_ENV=production 
+
 HOST_VOLUME_PATH=data
 
 # JWT Secret Key (CHANGE THIS IN PRODUCTION!)
 JWT_SECRET=supersecretkey
 
-# Log level (debug, info, warn, error)
-LOG_LEVEL=warn
+# LOGGING 
+#(debug, info, warn, error)
+LOG_LEVEL=warn 
+LOG_ENABLED=true
 
-# Node environment (production, development, etc.)
-NODE_ENV=production
+# SERVICE AUTH
+AUTH_SERVICE_PORT=3002
 
-UM_SERVICE_PORT=3003
+# SERVICE GAME
+GAME_SERVICE_PORT=3003
+
+# SERVICE UM
+UM_SERVICE_PORT=3004
+UM_DB_PATH=./data/um
