--- a/srcs/users/tsconfig.json
+++ b/srcs/users/tsconfig.json
@@ -1,7 +1,9 @@
 {
     "compilerOptions": {
         "target": "es2022",
+        "types": ["node", "jest", "better-sqlite3"],
         "module": "nodenext",
+        "moduleResolution": "nodenext",
         "outDir": "dist",
         "rootDir": "src",
         "baseUrl": "./src",
