--- a/srcs/users/package.json
+++ b/srcs/users/package.json
@@ -17,6 +17,7 @@
     "@eslint/js": "^9.39.1",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "^30.0.0",
+    "@types/node": "^24.10.1",
     "@typescript-eslint/eslint-plugin": "^8.47.0",
     "@typescript-eslint/parser": "^8.47.0",
     "eslint": "^9.39.1",
@@ -32,9 +33,11 @@
     "typescript-eslint": "^8.47.0"
   },
   "dependencies": {
+    "@prisma/client": "^7.0.0",
     "better-sqlite3": "^12.4.1",
     "envalid": "^8.1.1",
     "fastify": "^5.6.2",
+    "prisma": "^6.19.0",
     "zod": "^4.1.12"
   }
 }
